--- a/site/entry.html
+++ b/site/entry.html
@@ -251,7 +251,7 @@
       container.className = 'seq-strip';
 
       const block = document.createElement('div'); block.className = 'seq-chain';
-      const header = document.createElement('h4'); header.textContent = 'Chain A (FASTA)';
+      const header = document.createElement('h4'); header.textContent = 'Chain A Sequence';
       const row = document.createElement('div'); row.className = 'seq-row';
 
       block.appendChild(header); block.appendChild(row);
