--- a/site/entry.html
+++ b/site/entry.html
@@ -15,7 +15,8 @@
 
     .topbar { display: flex; align-items: center; gap: 12px; padding: 12px 16px; border-bottom: 1px solid var(--card-border); }
     .topbar a { text-decoration: none; }
-    .title { font-size: 20px; font-weight: 600; margin: 0; }
+    .title { font-size: 20px; font-weight: 600; margin: 0; display:flex; align-items:center; gap:8px; flex-wrap:wrap; }
+    .subtitle { font-weight: 400; color:#555; font-size: 16px; }
 
     .main {
       height: calc(100vh - 54px);
@@ -89,7 +90,10 @@
 <body>
   <div class="topbar">
     <a href="index.html">← Back</a>
-    <h1 id="title" class="title"></h1>
+    <h1 class="title">
+      <span id="title-id"></span>
+      <span id="title-name" class="subtitle"></span>
+    </h1>
   </div>
 
   <div class="main">
@@ -366,12 +370,30 @@
       }
     }
 
+    // --- NEW: try to get a protein name (catalog first, UniProt fallback)
+    async function fetchUniProtName(uid) {
+      try {
+        const res = await fetch(`https://rest.uniprot.org/uniprotkb/${encodeURIComponent(uid)}.json`, { cache: 'no-store' });
+        if (!res.ok) return null;
+        const data = await res.json();
+        const pd = data.proteinDescription || {};
+        // Prefer recommended name, then submission/alternative
+        const rec = pd.recommendedName?.fullName?.value;
+        const sub = pd.submissionNames?.[0]?.fullName?.value;
+        const alt = pd.alternativeNames?.[0]?.fullName?.value;
+        return rec || sub || alt || null;
+      } catch {
+        return null;
+      }
+    }
+
     async function load(){
       const uid = getParam('uid');
-      const titleEl  = document.getElementById('title');
-      const viewerErr= document.getElementById('viewer-error');
-      const seqErr   = document.getElementById('seq-error');
-      const seqBody  = document.getElementById('seq-body');
+      const titleIdEl  = document.getElementById('title-id');
+      const titleNameEl= document.getElementById('title-name');
+      const viewerErr  = document.getElementById('viewer-error');
+      const seqErr     = document.getElementById('seq-error');
+      const seqBody    = document.getElementById('seq-body');
 
       const copyBtn  = document.getElementById('copyBtn');
       const dlCifBtn = document.getElementById('dlCifBtn');
@@ -379,7 +401,8 @@
       const dropdown = document.getElementById('downloadDropdown');
       const downloadBtn = document.getElementById('downloadBtn');
 
-      titleEl.textContent = uid || '(missing uid)';
+      titleIdEl.textContent = uid || '(missing uid)';
+      titleNameEl.textContent = ''; // will fill shortly
 
       // Dropdown wiring
       function closeDropdown(){ dropdown.classList.remove('open'); }
@@ -402,6 +425,17 @@
         viewerErr.style.display = seqErr.style.display = 'block';
         viewerErr.textContent = seqErr.textContent = 'Entry not found in catalog.';
         return;
+      }
+
+      // --- Fill protein name in header (catalog first, UniProt fallback)
+      {
+        const fromCatalog = entry.protein_name || entry.description || '';
+        if (fromCatalog) {
+          titleNameEl.textContent = `— ${fromCatalog}`;
+        } else if (uid) {
+          const name = await fetchUniProtName(uid);
+          if (name) titleNameEl.textContent = `— ${name}`;
+        }
       }
 
       const cifUrl   = entry.files.structure_cif;
@@ -516,3 +550,4 @@
   </script>
 </body>
 </html>
+
