--- a/site/index.html
+++ b/site/index.html
@@ -146,27 +146,56 @@
   </div>
 
   <script>
-    // --- UniProt name cache and fetcher (recommended name only)
+    // --- UniProt name cache and fetcher (best available name)
     const uniprotNameCache = new Map(); // uid -> string | null | Promise<string|null>
     const UNIPROT_BASE = 'https://rest.uniprot.org/uniprotkb/';
 
-    async function fetchUniProtRecommendedName(uid) {
+    async function fetchUniProtBestName(uid) {
       if (!uid) return null;
       if (uniprotNameCache.has(uid)) {
         const v = uniprotNameCache.get(uid);
         return v instanceof Promise ? v : v;
+        // if it was a resolved string/null, we return directly; if it's a Promise, await below
       }
       const p = (async () => {
         try {
           const res = await fetch(UNIPROT_BASE + encodeURIComponent(uid) + '.json', { cache: 'no-store' });
           if (!res.ok) return null;
           const data = await res.json();
-          return data?.proteinDescription?.recommendedName?.fullName?.value || null;
+          const pd = data?.proteinDescription;
+
+          // Preferred: recommendedName fullName
+          const rec = pd?.recommendedName?.fullName?.value;
+          if (rec) return rec;
+
+          // Fallbacks: alternativeNames, submissionNames, shortName variants
+          const altArr = pd?.alternativeNames;
+          if (Array.isArray(altArr) && altArr.length) {
+            const altFull  = altArr[0]?.fullName?.value;
+            if (altFull) return altFull;
+            const altShort = altArr[0]?.shortName?.[0]?.value;
+            if (altShort) return altShort;
+          }
+          const subArr = pd?.submissionNames;
+          if (Array.isArray(subArr) && subArr.length) {
+            const subFull  = subArr[0]?.fullName?.value;
+            if (subFull) return subFull;
+            const subShort = subArr[0]?.shortName?.[0]?.value;
+            if (subShort) return subShort;
+          }
+
+          const recShort = pd?.recommendedName?.shortName?.[0]?.value;
+          if (recShort) return recShort;
+
+          return null;
         } catch { return null; }
       })();
+
+      // Store the promise first to coalesce concurrent requests
       uniprotNameCache.set(uid, p);
       const resolved = await p;
-      uniprotNameCache.set(uid, resolved); // store final value
+      // Replace the promise with the final value
+      uniprotNameCache.set(uid, resolved);
       return resolved;
     }
 
@@ -241,12 +270,11 @@
         div.appendChild(openBtn);
         results.appendChild(div);
 
-        // Fill the recommended name (non-blocking)
+        // Fill the best-available UniProt name (non-blocking)
         const uid = entry.uniprot_id;
         if (uid) {
-          fetchUniProtRecommendedName(uid).then(name => {
-            // If another render happened since we started, skip updating old nodes
-            if (token !== renderToken) return;
+          fetchUniProtBestName(uid).then(name => {
+            if (token !== renderToken) return; // stale render guard
             if (name) nameSpan.textContent = `— ${name}`;
           });
         }
