--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,10 @@
       padding: 16px 24px;
       border-bottom: 1px solid var(--card-border);
       background: #fff;
+      height: 70px; /* match entry.html’s --sitebar-h */
+      box-sizing: border-box;
     }
+
 
     .title {
       font-size: 22px;
