--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
     :root {
       --gap: 12px;
       --card-border: #ddd;
+      --sitebar-h: 70px;
       --bg: #f8f9fb;
       --card-bg: #fff;
     }
@@ -26,7 +27,7 @@
       padding: 16px 24px;
       border-bottom: 1px solid var(--card-border);
       background: #fff;
-      height: 70px; /* match entry.html’s --sitebar-h */
+      height: var(--sitebar-h);
       box-sizing: border-box;
     }
 
